--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,11 @@ environment:
   sdk: '>=2.19.2 <3.0.0'
 
 dependencies:
+  auto_size_text: ^3.0.0
   flutter:
     sdk: flutter
   google_fonts: ^4.0.4
+  http: ^0.13.6
   lottie: ^2.3.2
 
 dev_dependencies:
